/*
 * $Id: ChangeLog,v 1.1224 2014-02-20 20:07:33 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-02-20 18:07 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_combo.prg
     ! Combobox with DISPPLAYEDIT clause shows no items when
       the form contains another Combobox without that clause.

2014-02-17 20:07 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_toolbar.ch
   * source/h_toolbar.prg
     + Added VERTICAL clause to show buttons in a column
       instead of a row.

2014-02-14 19:12 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * include/oohg.h
   * source/c_controlmisc.c
     + _OOHG_DoEventMouseCoords() function added for send mouse
       coordinates as parameter.
   * source/h_browse.prg
   * source/h_checklist.prg
   * source/h_combo.prg
   * source/h_controlmisc.prg
   * source/h_form.prg
   * source/h_grid.prg
   * source/h_listbox.prg
   * source/h_radio.prg
   * source/h_richeditbox.prg
   * source/h_status.prg
   * source/h_textbox.prg
   * source/h_toolbar.prg
   * source/h_xbrowse.prg
     + Added missing mouse coordinates to CLICK events.

2014-02-10 23:08 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_picture.prg
     + ::HorizontalScroll() and ::VerticalScroll() methods added.
     + lNoRedraw parameter added to ::Degree(), ::Zoom(), ::HBitmap,
       ::Picture and ::Buffer methods.
   * source/h_status.prg
     ! Fixed ANCHOR adjust on attached controls.

2014-02-09 22:09 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/c_cdiplus.c
     + Added hGlobal initialization to avoid MinGW warning.

2014-02-09 17:52 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/c_cdiplus.c
     ! Fixed missing lResult declaration from previous commit.

2014-02-09 17:48 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>