@@ -1,11 +1,15 @@
 /*
- * $Id: ChangeLog,v 1.1224 2014-02-20 20:07:33 fyurisich Exp $
+ * $Id: ChangeLog,v 1.1225 2014-03-02 03:20:07 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2014-03-01 21:17 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+   * source/c_gdiplus.c
+     ! Fixed image return from GPlusLoadImageFromBuffer() function.
 
 2014-02-20 18:07 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
    * source/h_combo.prg
